--- a/motorized_fader_control/package.json
+++ b/motorized_fader_control/package.json
@@ -25,7 +25,7 @@
 		"changelog": "Lorem ipsum"
 	},
 	"engines": {
-		"node": ">=18.20.2 <19.0.0",
+		"node": ">=v14.15.4",
 		"volumio": ">=3.631.0 <4.0.0"
 	},
 	"dependencies": {
