--- a/motorized_fader_control/package.json
+++ b/motorized_fader_control/package.json
@@ -30,9 +30,12 @@
 	},
 	"dependencies": {
 		"fs-extra": "^0.28.0",
+		"heapdump": "^0.3.15",
 		"kew": "^0.7.0",
+		"prompt-sync": "^4.2.0",
 		"serialport": "^9.2.8",
 		"v-conf": "^1.4.0",
+		"weak-napi": "^2.0.2",
 		"winston": "^3.13.0"
 	},
 	"devDependencies": {
