Feature: Input Seek on Untouch FIX: unnecessary event loops FIX: logging FIX: config saving

--- a/motorized_fader_control/UIConfig.json
+++ b/motorized_fader_control/UIConfig.json
@@ -23,7 +23,9 @@
           "FADER_CONTROLLER_SPEED_MEDIUM",
           "FADER_CONTROLLER_SPEED_LOW",
           "SERIAL_PORT",
-          "BAUD_RATE"
+          "BAUD_RATE",
+          "UPDATE_VOLUME_ON_MOVE",
+          "UPDATE_SEEK_ON_MOVE"
         ]
       },
       "content": [
@@ -399,7 +401,7 @@
       "onSave": {
         "type": "controller",
         "endpoint": "system_hardware/motorized_fader_control",
-        "method": "saveGeneralSettingsRestart"
+        "method": "saveFaderControllerSettingsRestart"
       },
       "saveButton": {
         "label": "TRANSLATE.BUTTON.SAVE",
