--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -53,15 +53,15 @@
     },
     "FADER_BEHAVIOR": {
       "type": "string",
-      "value": "[{\"FADER_IDX\":0,\"OUTPUT\":\"seek\",\"INPUT\":\"seek\",\"SEEK_TYPE\":\"album\"},{\"FADER_IDX\":1,\"OUTPUT\":\"volume\",\"INPUT\":\"volume\",\"SEEK_TYPE\":\"track\"}]"
+      "value": "[{\"FADER_IDX\":0,\"OUTPUT\":\"seek\",\"INPUT\":\"seek\",\"SEEK_TYPE\":\"track\"},{\"FADER_IDX\":1,\"OUTPUT\":\"volume\",\"INPUT\":\"volume\",\"SEEK_TYPE\":\"track\"}]"
     },
     "UPDATE_VOLUME_ON_MOVE": {
       "type": "boolean",
-      "value": true
+      "value": false
     },
     "UPDATE_SEEK_ON_MOVE": {
       "type": "boolean",
-      "value": true
+      "value": false
     },
     "FADER_SPEED_FACTOR": {
         "type": "string",
@@ -117,11 +117,11 @@
     },
     "LOG_LEVEL": {
       "type": "string",
-      "value": "debug"
+      "value": "info"
     },
     "DEBUG_MODE": {
       "type": "boolean",
-      "value": true
+      "value": false
     },
     "STATE_UPDATE_INTERVAL": {
       "type": "number",
