add: log_18n .json simplify startup logging

--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -125,7 +125,7 @@
     },
     "LOG_LEVEL": {
       "type": "string",
-      "value": "debug"
+      "value": "info"
     },
     "DEBUG_MODE": {
       "type": "boolean",
