update FaderController module to V2

--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -9,7 +9,7 @@
     },
     "FADER_CONTROLLER_MIDI_LOG": {
       "type": "boolean",
-      "value": false
+      "value": true
     },
     "FADER_CONTROLLER_VALUE_LOG": {
       "type": "boolean",
