--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -13,7 +13,7 @@
     },
     "FADER_CONTROLLER_MIDI_LOG": {
       "type": "boolean",
-      "value": true
+      "value": false
     },
     "FADER_CONTROLLER_VALUE_LOG": {
       "type": "boolean",
