--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -13,7 +13,7 @@
     },
     "FADER_CONTROLLER_MIDI_LOG": {
       "type": "boolean",
-      "value": false
+      "value": true
     },
     "FADER_CONTROLLER_VALUE_LOG": {
       "type": "boolean",
@@ -149,7 +149,11 @@
     },
     "FADER_AGGREGATION_DELAY": {
       "type": "number",
-      "value": 10
+      "value": 1
+    },
+    "DISABLE_FADER_AGGREGATION": {
+      "type": "boolean",
+      "value": true
     }
 }
   
