--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -7,6 +7,14 @@
       "type": "number",
       "value": 0.001
     },
+    "FADER_CONTROLLER_FEEDBACK_MIDI": {
+      "type": "boolean",
+      "value": true
+    },
+    "FADER_CONTROLLER_FEEDBACK_TOLERANCE": {
+      "type": "number",
+      "value": 10
+    },
     "FADER_CONTROLLER_QUEUE_OVERFLOW": {
       "type": "number",
       "value": 10000000
