add config to disable fader controller internal event logging

--- a/motorized_fader_control/config.json
+++ b/motorized_fader_control/config.json
@@ -31,6 +31,10 @@
       "type": "boolean",
       "value": true
     },
+    "DISABLE_INTERNAL_EVENT_LOGGING": {
+      "type": "boolean",
+      "value": true
+    },
     "FADER_CONTROLLER_CALIBRATION_ON_START": {
       "type": "boolean",
       "value": true
